# 333

./: README.md  bot.py  keep_alive.py  main.py  pyproject.toml  replit.md  requirements.txt  web_server.py
attached_assets/: Pasted--keep-alive--1755357166040_1755357166042.txt
commands/: admin_commands.py  club_commands.py  match_commands.py  player_commands.py  stats_commands.py
templates/: index.html
utils/: data_manager.py  scheduler.py
